# My_Less_is_More

./: README.md
CM/: CM.h  CMakeLists.txt  Ours.h  back.cpp  benchmark.h  config.h  main.cpp
CPU/CM/: ACC16.txt  ACC16new.txt  ACC4.txt  ACC8.txt  CM  CM.prof  CMakeCache.txt  CMakeLists.txt  Ideal.h  Makefile  Ours.h  Ours.h.back.back  Ours.h.back.back1  Ours.h.back1  backup  benchmark.h  cmake_install.cmake  compile_commands.json  config.h  main.cpp  results.txt  run_cm.sh  run_tests.sh  throughput_results.txt  throughput_test.sh
CPU/Coco/: config.h
CPU/queueprocesstime/: time1.txt  time16.txt  time16_earlystop.txt
CPU/template/: Abstract.h  Ideal.h  Merge.h  Ours.h  Ours.h.back  Ours.h.back.back  Ours.h.back.back.back  Ours.h.back.back.back.back  Ours.h.back1
Count/: CMakeLists.txt  Count.h  Ours.h  benchmark.h  config.h
DD/: CMakeLists.txt  DD.h  Ours.h  benchmark.h  config.h
SS/: CMakeLists.txt  Ours.h  SS.h  benchmark.h  config.h  main.cpp
UnivMon/: CMakeLists.txt  Ours.h  UnivMon.h  benchmark.h  config.h
common/: cuckooMap.h  hash.h  heap.h  util.h
data_generator/: dirty_zipfian_int_distribution.h  gen.sh  generator.cpp
queue/: atomicops.h  readerwriterqueue.h
sketch/: CM.h
